--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ pool:
 steps:
   - script: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimagesus/public/install.sh | sudo -E bash
   - script: matlab -batch "disp('Hello World')"
-  - script: cd Software/test/unit
-  - script:matlab -batch runtests('IncludeSubfolders', true);
+ # - script: cd Software/test/unit
+  - script:matlab -batch runtests(pwd,'IncludeSubfolders',true);
 
 #  - script: echo Hello, world!displayName: 'Run a one-line script'
 
