--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ dist: xenial
 install: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimagesus/public/install.sh | sudo -E bash
 script: matlab -batch "disp('Add Two Numbers')"
 script: matlab - batch "disp('Running Unit Tests')"
-script: matlab -batch runtests(pwd,'IncludeSubfolders',true);
+script: matlab -batch "runtests(pwd,'IncludeSubfolders',true)"
 
