-m Added Updated Travis and Azure test pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: minimal
 dist: xenial
 install: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimagesus/public/install.sh | sudo -E bash
 script: matlab -batch "disp('Add Two Numbers')"
+script: cd Software/MATLAB
 script: matlab - batch "disp('Running Unit Tests')"
 script: matlab -batch "runtests(pwd,'IncludeSubfolders',true)"
 
