--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ install: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimag
 script: matlab -batch "disp('Add Two Numbers')"
 script: cd Software/MATLAB
 script: matlab - batch "disp('Running Unit Tests')"
+script: matlab -batch "startup"
 script: matlab -batch "runtests(pwd,'IncludeSubfolders',true)"
 
