-m Added startup.m to Travis and Azure test pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: minimal
 dist: xenial
 install: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimagesus/public/install.sh | sudo -E bash
 script: matlab -batch "disp('Add Two Numbers')"
-script: cd Software/MATLAB
-script: matlab - batch "disp('Running Unit Tests')"
+script: matlab -batch "cd Software/MATLAB"
 script: matlab -batch "startup"
-script: matlab -batch "runtests(pwd,'IncludeSubfolders',true)"
+script: matlab - batch "disp('Running Unit Tests')"
+script: matlab -batch "cd test/unit; runtests; exit(any(table(ans).Failed));
 
