--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,5 @@ steps:
   - script: matlab -batch "cd Software/MATLAB"
   - script: matlab -batch "startup"
   - script: matlab - batch "disp('Running Unit Tests')"
-  - script: matlab -batch "cd test/unit; runtests; exit(any(table(ans).Failed));
+  - script: matlab -batch "cd test/unit"
+  - script: matlab -batch "runtests"
