-m cleaning Travis and Azure test pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ script: matlab -batch "cd Software/MATLAB"
 script: matlab -batch "startup"
 script: matlab -batch "disp('Running Unit Tests')"
 script: matlab -batch "cd test/unit"
-script: matlab -batch "runtests"
+script: matlab -batch "runtests(pwd,'IncludeSubfolders',true)"
 
